examples/test/testpolicy4915.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4915
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key8: value9
      key3: value35
      key26: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value44
          key43: value42
      podSelector:
        matchLabels:
          key28: value4
